Minor spacing fixes

--- a/app/assets/stylesheets/_layout.scss
+++ b/app/assets/stylesheets/_layout.scss
@@ -189,5 +189,5 @@ ol.breadcrumb {
 }
 
 #main-container {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
